--- a/src/system-interface/templates/performance_data.html
+++ b/src/system-interface/templates/performance_data.html
@@ -3,13 +3,12 @@
 
 {% block content %}
 
-<script src="https://unpkg.com/htmx.org@1.6.0" integrity="sha384-G4dtlRlMBrk5fEiRXDsLjriPo8Qk5ZeHVVxS8KhX6D7I9XXJlNqbdvRlp9/glk5D" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <style>
     .diagram_list{
 
-        height:200px;
+        height:300px;
         width: auto;
         overflow-y: scroll;
         float:right;
@@ -17,7 +16,14 @@
         background-color: white;
         
     }
-    
+
+    .highlight {
+        color: white;
+        background-color: #507a77;
+    }
+    .imgList{
+        width: auto;
+    }
     a.redirect{
 
         color:black ;
@@ -32,6 +38,7 @@
     ul.a {
         list-style-type: none;
         margin: 0;
+        width:fit-content;
         padding: 5px;
     }
 
@@ -69,7 +76,7 @@
 
     table, td {
       border: 1px solid gray;
-      width: 800px;
+      width: auto;
       background-color: #afc5c3;
       padding: 15px;
       margin-left:auto; 
@@ -149,6 +156,7 @@
 
                 <div role="tabpanel" class="tab-pane fade" id="diagrams">
 
+                    {% set index=0 %}
                     {% if diagrams %}
                     <table class="imgTd"><tr><td>
                         <h4 id='highlight'>{{diagrams[0]}}</h4>
@@ -161,25 +169,13 @@
                 
                 
                     <div class="diagram_list" id="list">
-                        <!--<form action="/time_phase_diagram/" method="POST">-->
+                       
                             <ul class = "a">
                             {% for diagram in diagrams %}
-                            <li id="imgList" onclick="changeDiagram( '{{diagrams[loop.index -1]}}','{{t_diagrams[loop.index -1]}}' )">{{diagram}}</li>
+                            <li class ="imgList" id="imgList" onclick="changeDiagram( '{{diagrams[loop.index -1]}}','{{t_diagrams[loop.index -1]}}')">{{diagram}}</li>
                             {% endfor %}
                             </ul>
 
-                        <!--</form>-->
-
-
-
-
-                        <!--<ul class = "a">
-
-                            {% for diagram in diagrams %}
-                            <li id="imgList" onclick="changeDiagram( '{{ diagrams[loop.index -1] }}','{{loop.index -1}}' )">{{diagram}}</li>
-                            {% endfor %}
-
-                        </ul>-->
                         
                     </div>
                     </td></tr></table>
@@ -204,14 +200,20 @@
 
 $(document).ready(function(){
 setInterval(function(){
-    $("#list").load(" #list > *");
+    $("#imglist").load(" #imglist > *");
     console.log("reloading...") ;
 }, 30000);
 });
 
+$('.a li').click(function(){
+    $('.highlight').removeClass('highlight');
+$(this).addClass('highlight');
+
+})
+
 function changeDiagram(Img,enImg){
     
-    console.log(enImg);
+
     var newImg = "data:image/jpeg;base64, "+ enImg  ;
     console.log(newImg);
     document.getElementById("picture").src = newImg;
