--- a/src/system-interface/templates/performance_data.html
+++ b/src/system-interface/templates/performance_data.html
@@ -152,9 +152,6 @@
                 <h1 class="noData">No Performance Data Available</h1>
                 {% endif %}
                 </div>
-
-                
-                
        
 
                 <div role="tabpanel" class="tab-pane fade" id="diagrams">
@@ -195,7 +192,9 @@
                    
                 </div>
             </div>
-
+            <div>
+                <input type="submit" value="Refresh Performance Data">
+            </div>
 
         </div>
     </form>
