interim commit with two tabs

--- a/src/system-interface/templates/base.html
+++ b/src/system-interface/templates/base.html
@@ -20,7 +20,8 @@
             <ul class="nav navbar-nav">
                 <li><a href="/local_console">Local Console</a></li>
                 <li><a href="/configuration">Configuration</a></li>
-                <li><a href="/performance_data">Performance Data</a></li>
+                <li><a href="/message_count">Message Count</a></li>
+                <li><a href="/time_phase_diagram">Time Phase Diagram</a></li>
             </ul>
         </div>
     </div>
