--- a/src/system-interface/templates/time_phase_diagram.html
+++ b/src/system-interface/templates/time_phase_diagram.html
@@ -8,13 +8,13 @@
 <style>
     .diagram_list{
 
-        height:300px;
-        width: auto;
+        height: 450px;
+        width:auto;
         overflow-y: scroll;
         float:right;
         border: 2px solid black;
         background-color: white;
-        
+        padding: 20px
     }
 
     .highlight {
@@ -85,7 +85,8 @@
 
 
     img {
-    width: 550px;
+    height: 450px;
+    width: auto;
     padding: 20px;
 
     }
